# piano-partner

./: .gitignore  LICENSE  README.md  pyproject.toml
src/piano_partner/: cli.py
src/piano_partner/common/: paths.py
src/piano_partner/synesthesia_to_midi/: __init__.py  cli.py  converter.py  detector.py  interactive.py  keyboard.py  midi_writer.py
src/piano_partner/teaching_app/: cli.py
src/piano_partner/youtube_downloader/: __init__.py  cli.py  downloader.py
tests/synesthesia_to_midi/: test_detector.py  test_interactive.py  test_keyboard.py  test_midi_writer.py
tests/youtube_downloader/: test_downloader.py
