[project]
name = "piano-partner"
version = "0.0.1"
description = "Piano Partner — tools to support piano lessons."
authors = [
    {name = "Nelson Bruno Moreno",email = "55368022+Bruno-Moreno@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.11,<4"
dependencies = [
    "yt-dlp (>=2025.1.0)",
    "typer (>=0.12.0)",
    "opencv-python (>=4.9)",
    "numpy (>=1.26)",
    "mido (>=1.3)",
]

[project.scripts]
piano-partner = "piano_partner.cli:app"

[tool.poetry]
packages = [{ include = "piano_partner", from = "src" }]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
ipykernel = "^6.29.5"
pytest = "^8.0.0"
